--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,19 @@
 {
-  "name": "Neon Pulse Pomodoro",
-  "short_name": "NeonTimer",
+  "name": "My Pomodoro",
+  "short_name": "My Pomodoro",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#020202",
   "theme_color": "#020202",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/3563/3563412.png",
+      "src": "./icon.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "./icon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
